--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,22 @@
 			<version>1.11</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.jooq/jooq-codegen-maven -->
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq-codegen-maven</artifactId>
+			<version>3.15.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq</artifactId>
+			<version>3.2.14</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
