--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<version>1.11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
